--- a/portfolio.html
+++ b/portfolio.html
@@ -306,24 +306,15 @@
     <footer class="footer">
       <div class="container">
         <div class="contact-footer">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-white">Studio</span></a
-          >
+          <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
           <address class="address">
             <ul class="list">
               <li class="item">
-                <a
-                  href="https://goo.gl/maps/RNsR4imkHqx8z6h36"
-                  target="_blank"
-                  rel="noreferrer noopener nofollow"
-                  class="map link"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+                <a href="https://goo.gl/maps/RNsR4imkHqx8z6h36" target="_blank" rel="noreferrer noopener nofollow"
+                  class="map link">м. Київ, пр-т Лесі Українки, 26</a>
               </li>
               <li class="item">
-                <a href="mailto:info@devstudio.com" class="link"
-                  >info@devstudio.com</a
-                >
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
               </li>
               <li class="item">
                 <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
@@ -335,50 +326,43 @@
           <h3 class="social-list-tittle">Приєднуйтесь</h3>
           <ul class="social-list list">
             <li class="social-item">
-              <a
-                href="https://www.instagram.com/"
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                aria-label="Instagram"
-                class="link"
-                ><svg class="item-icon">
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
+              <a href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener nofollow" aria-label="Instagram"
+                class="link"><svg class="item-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a>
             </li>
             <li class="social-item">
-              <a
-                href="https://www.instagram.com/"
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                class="link"
-                aria-label="Twitter"
-                ><svg class="item-icon">
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
+              <a href="https://www.twitter.com/" target="_blank" rel="noreferrer noopener nofollow" class="link"
+                aria-label="Twitter"><svg class="item-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a>
             </li>
             <li class="social-item">
-              <a
-                href="https://www.instagram.com/"
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                aria-label="Facebook"
-                class="link"
-                ><svg class="item-icon">
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
+              <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener nofollow" aria-label="Facebook"
+                class="link"><svg class="item-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a>
             </li>
             <li class="social-item">
-              <a
-                href="https://www.instagram.com/"
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                aria-label="Linkedin"
-                class="link"
-                ><svg class="item-icon">
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
+              <a href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener nofollow" aria-label="Linkedin"
+                class="link"><svg class="item-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a>
             </li>
           </ul>
+        </div>
+        <div class="mailing">
+          <form class="mailing-form" autocomplete="off">
+            <label class="form-label">
+              <span class="description">Підпишіться на розсилку</span>
+              <input type="email" name="email" placeholder="E-mail" class="form-input" required />
+            </label>
+            <button type="submit" class="button-subscribe">
+              Підписатися<svg class="item-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
