--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
           </ul>
         </div>
         <div class="mailing">
+          <span class="description">Підпишіться на розсилку</span>
           <form class="mailing-form" autocomplete="off">
             <label class="form-label">
-              <span class="description">Підпишіться на розсилку</span>
               <input
                 type="email"
                 name="email"
@@ -636,9 +636,9 @@
                 </svg>
               </div>
             </li>
-            <li class="form-field">
+            <li class="form-field text">
               <label for="comment" class="label">Коментар</label>
-              <div class="input-field text">
+              <div class="input-field">
                 <textarea
                   class="comment input"
                   name="comment"
